# xwingridselect

./: .gitignore  CMakeLists.txt  README.md  xwingridselect.1
contrib/: CMakeLists.txt  xwingridselect_open_ebuf  xwingridselect_run  xwingridselect_select_ebuf
contrib/archlinux/: PKGBUILD
src/: CMakeLists.txt  gridselect_box.c  gridselect_box.h  gridselect_search_box.c  gridselect_search_box.h  gridselect_window_box.c  gridselect_window_box.h  main.c  win32_interaction.c  win32_interaction.h  x_interaction.c  x_interaction.h
